[gd_scene load_steps=49 format=3 uid="uid://c64mnm4lytg1p"]

[ext_resource type="Texture2D" uid="uid://o87nni5tilpu" path="res://assets/art/characters/npcs/Sprite_Skassierer.png" id="1_j1ju4"]
[ext_resource type="Script" path="res://scripts/cashier.gd" id="2_al68j"]
[ext_resource type="Texture2D" uid="uid://yonskrokkniu" path="res://assets/art/icons/keys/E-Key.png" id="3_kxn8m"]
[ext_resource type="FontFile" uid="uid://ct16kqea65wrw" path="res://assets/fonts/ThaleahFat.ttf" id="4_dvmdo"]
[ext_resource type="Texture2D" uid="uid://dvsjtdwevun64" path="res://assets/art/ui/UI_Elements02.png" id="5_u5rhx"]

[sub_resource type="AtlasTexture" id="AtlasTexture_wjqjn"]
atlas = ExtResource("1_j1ju4")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kaek2"]
atlas = ExtResource("1_j1ju4")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6xbhd"]
atlas = ExtResource("1_j1ju4")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_srb0w"]
atlas = ExtResource("1_j1ju4")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3dhfk"]
atlas = ExtResource("1_j1ju4")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_u07mh"]
atlas = ExtResource("1_j1ju4")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_41gx2"]
atlas = ExtResource("1_j1ju4")
region = Rect2(288, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_6b1hr"]
atlas = ExtResource("1_j1ju4")
region = Rect2(336, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8di6e"]
atlas = ExtResource("1_j1ju4")
region = Rect2(384, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jvugb"]
atlas = ExtResource("1_j1ju4")
region = Rect2(432, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_aosbj"]
atlas = ExtResource("1_j1ju4")
region = Rect2(480, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_a1hy0"]
atlas = ExtResource("1_j1ju4")
region = Rect2(528, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_15erc"]
atlas = ExtResource("1_j1ju4")
region = Rect2(576, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lykdm"]
atlas = ExtResource("1_j1ju4")
region = Rect2(624, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_piyls"]
atlas = ExtResource("1_j1ju4")
region = Rect2(672, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v8sx5"]
atlas = ExtResource("1_j1ju4")
region = Rect2(720, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_607bb"]
atlas = ExtResource("1_j1ju4")
region = Rect2(768, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_v0ox0"]
atlas = ExtResource("1_j1ju4")
region = Rect2(816, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_xptp7"]
atlas = ExtResource("1_j1ju4")
region = Rect2(864, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_t4o1e"]
atlas = ExtResource("1_j1ju4")
region = Rect2(912, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yo8sq"]
atlas = ExtResource("1_j1ju4")
region = Rect2(960, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3b6on"]
atlas = ExtResource("1_j1ju4")
region = Rect2(0, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_obatq"]
atlas = ExtResource("1_j1ju4")
region = Rect2(48, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ggb4h"]
atlas = ExtResource("1_j1ju4")
region = Rect2(96, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cfl4"]
atlas = ExtResource("1_j1ju4")
region = Rect2(144, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_yyth8"]
atlas = ExtResource("1_j1ju4")
region = Rect2(192, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_rh5vq"]
atlas = ExtResource("1_j1ju4")
region = Rect2(240, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gg4jw"]
atlas = ExtResource("1_j1ju4")
region = Rect2(288, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_bkjbe"]
atlas = ExtResource("1_j1ju4")
region = Rect2(336, 96, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_gatq3"]
atlas = ExtResource("1_j1ju4")
region = Rect2(0, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_7ju0j"]
atlas = ExtResource("1_j1ju4")
region = Rect2(48, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_d2b0x"]
atlas = ExtResource("1_j1ju4")
region = Rect2(96, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_vcv4d"]
atlas = ExtResource("1_j1ju4")
region = Rect2(144, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_81mby"]
atlas = ExtResource("1_j1ju4")
region = Rect2(192, 48, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jukt7"]
atlas = ExtResource("1_j1ju4")
region = Rect2(240, 48, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_tlhd5"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjqjn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kaek2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6xbhd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_srb0w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3dhfk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u07mh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41gx2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6b1hr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8di6e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jvugb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aosbj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a1hy0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_15erc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lykdm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_piyls")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v8sx5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_607bb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v0ox0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xptp7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t4o1e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yo8sq")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3b6on")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_obatq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ggb4h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cfl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yyth8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rh5vq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gg4jw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bkjbe")
}],
"loop": true,
"name": &"talk",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_gatq3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ju0j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d2b0x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vcv4d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_81mby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jukt7")
}],
"loop": false,
"name": &"talk_transition",
"speed": 1.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_lrysu"]
atlas = ExtResource("3_kxn8m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xcncb"]
atlas = ExtResource("3_kxn8m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_nxg5b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_lrysu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xcncb")
}],
"loop": true,
"name": &"key_animation",
"speed": 3.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ptund"]
size = Vector2(22, 67)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vy5tp"]
size = Vector2(64, 85)

[sub_resource type="LabelSettings" id="LabelSettings_igycq"]
font = ExtResource("4_dvmdo")
font_color = Color(0, 0, 0, 1)

[sub_resource type="LabelSettings" id="LabelSettings_mtgmk"]
font = ExtResource("4_dvmdo")
font_color = Color(1, 0, 0, 1)
outline_size = 5
outline_color = Color(0, 0, 0, 1)

[node name="cashier" type="CharacterBody2D"]
script = ExtResource("2_al68j")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(7, 0)
sprite_frames = SubResource("SpriteFrames_tlhd5")
animation = &"talk_transition"

[node name="e_key_animation" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(-1.69407e-21, -34)
scale = Vector2(0.505001, 0.505001)
sprite_frames = SubResource("SpriteFrames_nxg5b")
animation = &"key_animation"

[node name="pickable_area" type="Area2D" parent="."]
position = Vector2(7, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="pickable_area"]
position = Vector2(-7, 37.5)
shape = SubResource("RectangleShape2D_ptund")

[node name="Marker2D" type="Marker2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(3, 19)
shape = SubResource("RectangleShape2D_vy5tp")
one_way_collision = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -15.0
offset_top = -50.0
offset_right = 15.0
offset_bottom = -17.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
label_settings = SubResource("LabelSettings_igycq")
horizontal_alignment = 1
vertical_alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/Label"]
show_behind_parent = true
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -3.0
offset_right = 3.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_u5rhx")
region_rect = Rect2(28, 192, 282, 55)
patch_margin_left = 10
patch_margin_top = 10
patch_margin_right = 10
patch_margin_bottom = 5

[node name="Timer" type="Timer" parent="."]

[node name="timerLabelMinutes" type="Label" parent="."]
z_index = 99
offset_left = -92.0
offset_top = -90.0
offset_right = -12.0
offset_bottom = -55.0
text = "Min
"
label_settings = SubResource("LabelSettings_mtgmk")
horizontal_alignment = 2
vertical_alignment = 3

[node name="timerLabelSeconds" type="Label" parent="."]
z_index = 99
offset_left = -71.0
offset_top = -90.0
offset_right = 9.0
offset_bottom = -55.0
text = "Sec"
label_settings = SubResource("LabelSettings_mtgmk")
horizontal_alignment = 2
vertical_alignment = 3

[node name="timerLabelMsecs" type="Label" parent="."]
z_index = 99
offset_left = -46.0
offset_top = -90.0
offset_right = 34.0
offset_bottom = -55.0
text = "Msec
"
label_settings = SubResource("LabelSettings_mtgmk")
horizontal_alignment = 2
vertical_alignment = 3

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="body_entered" from="pickable_area" to="." method="_on_pickable_area_body_entered"]
[connection signal="body_exited" from="pickable_area" to="." method="_on_pickable_area_body_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
